# ops_test_lastHomework

./: .gitignore  README.md
FluxEV/: README.md  main.py  pyproject.toml
FluxEV/fluxev/: __init__.py  cli.py  datasets.py  detector.py  evaluation.py  ops_preprocessing.py  plotting.py  preprocessing.py  spot.py
Online Boutique/: .gitignore  README.md  skaffold.yaml
Online Boutique/docs/: inventory-service-development.md
Online Boutique/helm-chart/: values.yaml
Online Boutique/kubernetes-manifests/: frontend.yaml  inventoryservice.yaml  kustomization.yaml  restockservice.yaml
agent/: .gitignore  README.md
agent/backend/: .env  .env.example  main.py  pyproject.toml
agent/backend/agents/: __init__.py  agent.py  analysis_store.py  analysis_task_manager.py  anomaly_analyzer.py  business_analyzer.py  engine.py  history.py  llm_client.py  report_store.py  schedule_analyzer.py  scheduler.py
agent/backend/api/: __init__.py  app.py  exceptions.py  schemas.py
agent/backend/api/routes/: __init__.py  analysis.py  anomaly.py  chat.py  config.py  monitor.py  polling.py
agent/backend/cli/: __init__.py  main.py
agent/backend/config/: __init__.py  logging_config.py  settings.py
agent/backend/tests/: verify_task1.py  verify_task12.py  verify_task2.py  verify_task3.py  verify_task4_5.py  verify_task6.py  verify_task7.py  verify_task8.py  verify_task9.py
agent/backend/tools/: __init__.py  base.py  examples.py  k8s_client.py  k8s_tools.py  logs.py  metrics_collector.py  prometheus.py
agent/frontend/: index.html  package-lock.json  package.json  (+1 more)
ops/: README.md
(+236 files in other folders)
