[project]
name = "fluxev"
version = "1.0.0"
description = "FluxEV 时间序列异常检测实现"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "more-itertools>=11.1.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "tables>=3.11.1",
]

[dependency-groups]
dev = ["pyright>=1.1.410"]
